--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.28.2",
     "react-scripts": "5.0.1",
-    "sass": "^1.32.0"
+    "sass": "^1.32.0",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
